# ZaloKit

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  DEPLOYMENT_GUIDE.md  LICENSE  MANIFEST.in  README.md  README_VI.md  pyproject.toml  requirements-dev.txt  requirements.txt  server.py  setup.py
.github/workflows/: ci.yml
docs/: index.md  mkdocs.yml  quickstart.md
examples/: __init__.py  bot_example.py  check_active.py  send_message.py  zalo_bot_demo.py
tests/: __init__.py  conftest.py  test_auth.py  test_client.py  test_exceptions.py  test_messaging.py  test_utils.py
zalokit/: __init__.py  auth.py  client.py  contacts.py  exceptions.py  groups.py  messaging.py  utils.py
